--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,47 @@
 {
-  "IDX.agenticWorkspace": true
+  // "editor.formatOnSave": true,
+  "IDX.aI.enableInlineCompletion": false,
+  "workbench.iconTheme": "material-icon-theme",
+  "cSpell.words": [
+      "autocorrect",
+      "autofocus",
+      "Firestore",
+      "riverpod",
+      "Signup",
+      "typedefs",
+      "unfocus"
+  ],
+  "dart.documentation": "full",
+  //Dart Settings
+  "http.proxySupport": "off",
+  "terminal.integrated.localEchoLatencyThreshold": -1,
+  "terminal.integrated.localEchoEnabled": "off",
+  "workbench.startupEditor": "none",
+  "editor.fontFamily": "JetBrains Mono, Menlo, Monaco, Courier New, monospace",
+  "editor.fontWeight": "normal",
+  "editor.fontSize": 13,
+  "editor.lineHeight": 1.5,
+  "editor.letterSpacing": 0,
+  "debug.console.fontSize": 12,
+  "window.commandCenter": false,
+  "workbench.preferredDarkColorTheme": "Default Dark Modern",
+  "workbench.preferredLightColorTheme": "Monospace Light",
+  "window.autoDetectColorScheme": true,
+  "workbench.layoutControl.enabled": false,
+  "inlineChat.mode": "preview",
+  "cSpell.ignoreWords": [
+      "dont"
+  ],
+  "debug.internalConsoleOptions": "openOnSessionStart",
+  "[dart]": {
+      "editor.formatOnSave": true,
+      "editor.formatOnType": true,
+      "editor.rulers": [
+          80
+      ],
+      "editor.selectionHighlight": false,
+      "editor.suggestSelection": "first",
+      "editor.tabCompletion": "onlySnippets",
+      "editor.wordBasedSuggestions": "off"
+  }
 }
