--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,10 +37,15 @@ dependencies:
   bloc: ^9.0.0
   hive: ^2.2.3
   flutter_bloc: ^9.1.1
+  equatable: ^2.0.7
+  intl: ^0.20.2
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  hive_generator: ^1.1.3
+  build_runner: ^2.1.11
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
