--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   equatable: ^2.0.7
   intl: ^0.20.2
   hive_flutter: ^1.1.0
+  path_provider: ^2.1.5
+  flex_color_scheme: ^8.2.0
 
 dev_dependencies:
   flutter_test:
