--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,14 +3,15 @@
   "IDX.aI.enableInlineCompletion": false,
   "workbench.iconTheme": "material-icon-theme",
   "cSpell.words": [
-      "autocorrect",
-      "autofocus",
-      "Firestore",
-      "riverpod",
-      "Signup",
-      "typedefs",
-      "unfocus"
-  ],
+    "autocorrect",
+    "autofocus",
+    "Firestore",
+    "myapp",
+    "riverpod",
+    "Signup",
+    "typedefs",
+    "unfocus"
+],
   "dart.documentation": "full",
   //Dart Settings
   "http.proxySupport": "off",
